# Stochastic-Substrate-Model

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  README.txt
docs/: 1_Core_Philosophy_And_Goal.md  2_Abstract_Operator_Payload_Model_Rationale.md  3_Core_Component_Specification.md  4_Connection_and_Delay_Mechanism.md  5_State_and_Update_Management.md  6_Simulation_Flow.md  Layer_Class_Hierarchy_Specification.md  Serialization_Framework.md  _current_code_dir_structure_.md
docs/controllers/: MetaController_Specification.md  TimeController_Specification.md  UpdateController_Specification.md
docs/schedulers/: Scheduler_Specification.md  UpdateScheduler_Specification.md
scripts/: generate_structure_doc.py  generate_vscode_debug_launches.py
src/: main.cpp
src/general/: AddOperator.cpp  CLI.cpp  InOperator.cpp  InputLayer.cpp  InternalLayer.cpp  Layer.cpp  MetaController.cpp  Operator.cpp  OutOperator.cpp  OutputLayer.cpp  Randomizer.cpp  Scheduler.cpp  Serializer.cpp  Simulator.cpp  TimeController.cpp  UpdateController.cpp  UpdateScheduler.cpp
src/headers/: NodeType.h  Payload.h  Scheduler.h  Simulator.h  UpdateEvent.h  UpdateScheduler.h  all_controllers.h
src/headers/cli/: CLI.h
src/headers/controllers/: MetaController.h  TimeController.h  UpdateController.h
src/headers/layers/: InputLayer.h  InternalLayer.h  Layer.h  LayerType.h  OutputLayer.h
src/headers/operators/: AddOperator.h  InOperator.h  Operator.h  OutOperator.h  all_operators.h
src/headers/util/: Console.h  Constants.h  DynamicArray.h  IdRange.h  LibsodiumRandomSource.h  PseudoRandomSource.h  RandomSource.h  Randomizer.h  Serializer.h
tests/unit_tests/: AddOperatorTests.cpp  InOperatorTests.cpp  OperatorAddConnectionTests.cpp  OperatorConstructionTests.cpp  OperatorJsonTests.cpp  OperatorMoveConnectionTests.cpp  OperatorRemoveConnectionTests.cpp  OperatorSerializeTests.cpp  OperatorTraverseTests.cpp  OutOperatorTests.cpp  PayloadTests.cpp  exampleTest.cpp
tests/unit_tests/CliTests/: CLITests.cpp
tests/unit_tests/ControllerTests/MetaController/: MetaControllerTests.cpp
tests/unit_tests/ControllerTests/MetaController/golden_files/: zero_internal_operators.json
tests/unit_tests/ControllerTests/TimeController/: TimeControllerTests.cpp
tests/unit_tests/LayerTests/InputLayer/: InputLayerTests.cpp
tests/unit_tests/LayerTests/InternalLayer/: InternalLayerTests.cpp
tests/unit_tests/LayerTests/Layer/: LayerTests.cpp
tests/unit_tests/LayerTests/Layer/golden_files/: empty_layer.json  layer_with_operators.json  layer_with_operators_compact.json
tests/unit_tests/LayerTests/OutputLayer/: OutputLayerTests.cpp
tests/unit_tests/OperatorTests/AddOperator/: AddOperatorTests.cpp
tests/unit_tests/OperatorTests/AddOperator/golden_files/: add_operator_basic_no_pretty_enclosed.json  add_operator_no_pretty_not_enclosed.json  add_operator_pretty_enclosed.json  add_operator_pretty_not_enclosed.json
tests/unit_tests/OperatorTests/InOperator/: InOperatorTests.cpp
tests/unit_tests/OperatorTests/InOperator/golden_files/: in_operator_constructor_id1.json  in_operator_constructor_id123.json  in_operator_constructor_id_max_int.json  in_operator_id3_acc_5_no_conn.json
tests/unit_tests/OperatorTests/Operator/: OperatorAddConnectionTests.cpp  OperatorConstructionTests.cpp  OperatorEqualityTests.cpp  OperatorJsonTests.cpp  OperatorMiscTests.cpp  OperatorMoveConnectionTests.cpp  OperatorRemoveConnectionTests.cpp  OperatorSerializeTests.cpp  OperatorTraverseTests.cpp
tests/unit_tests/OperatorTests/Operator/golden_files/: operator_multi_conn_same_dist.json
tests/unit_tests/OperatorTests/OutOperator/: OutOperatorTests.cpp
tests/unit_tests/OperatorTests/OutOperator/golden_files/: out_operator_with_data.json
tests/unit_tests/UtilTests/IdRange/: IdRangeTests.cpp
tests/unit_tests/UtilTests/Serializer/: SerializerTests.cpp
tests/unit_tests/golden_files/addOperator/: add_operator_no_pretty_not_enclosed.json  add_operator_pretty_enclosed.json  add_operator_pretty_not_enclosed.json
tests/unit_tests/golden_files/inOperator/: in_operator_constructor_id0.json  in_operator_id2_acc_10_neg20.json
tests/unit_tests/golden_files/operator/: operator_one_connection.json
tests/unit_tests/golden_files/outOperator/: out_operator_empty.json
tests/unit_tests/helpers/: JsonTestHelpers.h  MockLayer.h  MockMetaController.h  MockOperator.h  MockRandomSource.h  MockRandomizer.h  MockSimulator.h  MockTimeController.h  TestLayer.h  TestOperator.h
